Fix spacing on sublists

--- a/templates/css/style.scss
+++ b/templates/css/style.scss
@@ -377,6 +377,10 @@ hr{
 ul, ol{
     @include text-block;
 
+    ul, ol {
+        @include text-block-compact;
+    }
+
     li {
         @include text-block-compact;
 
